--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "incremental": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "resolveJsonModule": false,
+    "resolveJsonModule": true,
     "moduleResolution": "node",
     "isolatedModules": true,
     "jsx": "preserve"
