--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/next": "^9.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.4.0",
     "sass": "^1.52.1"
   },
   "devDependencies": {
