--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/next": "^9.0.0",
+    "next-auth": "^4.10.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
@@ -17,6 +18,7 @@
     "stripe": "^9.9.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.36",
     "@types/react": "^18.0.9",
     "eslint": "8.16.0",
