--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/next": "^9.0.0",
+    "faunadb": "^4.6.0",
     "next-auth": "^4.10.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
