--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.35.0",
     "@types/next": "^9.0.0",
+    "axios": "^0.27.2",
     "faunadb": "^4.6.0",
     "next-auth": "^4.10.3",
     "react": "18.1.0",
