--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^6.6.4",
+    "@prismicio/helpers": "^2.3.3",
+    "@prismicio/react": "^2.4.4",
     "@stripe/stripe-js": "^1.35.0",
     "@types/next": "^9.0.0",
     "axios": "^0.27.2",
@@ -26,6 +30,7 @@
     "@types/react": "^18.0.9",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "slice-machine-ui": "^0.4.2",
     "tsc-node": "^0.0.3",
     "typescript": "^4.8.0-dev.20220528"
   }
