--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "faunadb": "^4.6.0",
     "next-auth": "^4.10.3",
+    "prismic-dom": "^2.2.7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.36",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^18.0.9",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
